# PyKuma

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
assets/: README.md
attic/: README.md
docs/: AKUMA_FRAME_DATA.md  AKUMA_MOVE_MAP.md  ANIMATIONS.md  ANIMATION_REFERENCE.md  ASSET_LAYOUT.md  BLOCKING_IMPLEMENTATION_PLAN.md  CONTROLS.md  DEBUGGING.md  DEBUG_BACKLOG.md  DIAGNOSTIC_FRAMEWORK.md  HITBOX_PIPELINE_NOTES.md  HITBOX_TEST_INSTRUCTIONS.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_ROADMAP.md  LIGHT_PUNCH_MAPPING.md  PROJECT_STRUCTURE.md  SF3_SOURCE_NAVIGATION_GUIDE.md  SPRITE_RESEARCH.md  TESTING_GUIDE.md
public/: README.md
scripts/: README.md  audit_animations.py  debug_hitbox.py  demo_character_expansion.py  demo_enhanced_sf3.py  demo_main_game_sprites.py  demo_simple_fighting.py  demo_simple_fighting_sprites.py  demo_sprite_integration.py  joystick_test.py
tests/: README.md  conftest.py  test_ai_difficulty.py  test_ai_opponent.py  test_air_fireball.py  test_akuma_integration.py  test_attack_states.py  test_camera.py  test_collision_detection.py  test_combo_reset.py  test_command_actions.py  test_controls.py  test_crouch_punches.py  test_data_provenance.py  test_demon_flip.py  test_determinism.py  test_diag_framework.py  test_diagnostics.py  test_fireball.py  test_fireball_realinput.py  test_frame_data_panel.py  test_hit_reactions.py  test_hitbox_geometry.py  test_hitbox_integration.py  test_hitbox_provenance.py  test_hitbox_screen_geometry.py  test_hitbox_vhb.py  test_hitbox_viewer.py  (+25 more)
(+105 files in other folders)
